--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 * {
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
@@ -49,7 +51,7 @@ main {
 .formulario__input:focus {
     border: 3px solid #0075ff;
     outline: none;
-    box-shadow: 3px 0 30px rgba(163, 163, 163, 0.4)
+    box-shadow: 3px 0 30px rgba(163, 163, 163, 0.4);
 }
 
 .formulario__grupo-btn-calcular {
@@ -99,7 +101,7 @@ main {
     }
 
     .formulario__btn {
-            width: 100%;
+        width: 100%;
     }
 };
     
