inputs 100% en media screen

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ main {
 }
 
 .formulario__btn {
-    margin-top: 40px;
+    margin: 40px;
     height: 45px;
     line-height: 45px;
     width: 30%;
@@ -93,6 +93,10 @@ main {
 @media screen and (max-width: 768px) {
     .formulario {
         grid-template-columns: 1fr;
+    }
+
+    .formulario__input {
+        width: 100%;
     }
 
     .formulario__grupo-btn-calcular,
