--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,43 @@ main {
 
 .formulario {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
 }
+
+/* .select-dia1 {
+    grid-column: 1 / 2;
+} */
+
+/* .select-mes1 {
+    grid-column: 2 / 3;
+} */
+
+/* .select-anio1 {
+    grid-column: 3 / 4;
+} */
+.campo {
+    grid-column: span 3;
+    font-size: 20px;
+    margin-top: 40px;
+    padding: 4px;
+    background-color: rgb(40, 168, 161);
+    border-radius: 3px;
+    border: none;
+}
+
+.select-precio1 {
+    grid-column: span 3;
+    width: 25%;
+    margin: auto;
+}
+
 
 .formulario__label {
     display: block;
     font-weight:700;
     padding:10px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .formulario__input {
@@ -42,10 +70,10 @@ main {
     background: #fff;
     border: 3px solid transparent;
     border-radius: 3px;
-    height: 45px;
-    line-height: 45px;
-    padding: 0 10px 0 10px;
-    transition: .3s ease all;
+    height: 35px;
+    line-height: 35px;
+    padding: 0 5px 0 5px;
+    transition: .3s ease all;  
 }
 
 .formulario__input:focus {
@@ -55,7 +83,7 @@ main {
 }
 
 .formulario__grupo-btn-calcular {
-    grid-column: span 2;
+    grid-column: span 3;
 }
 
 .formulario__grupo-btn-calcular {
@@ -79,7 +107,7 @@ main {
 }
 
 .formulario__btn:hover {
-    box-shadow: 3px 0 30px rgb(155, 154, 154, 1);
+    background-color: rgba(19, 68, 106, 0.8);
 }
 
 .disclaimer {
@@ -89,15 +117,12 @@ main {
     border-radius: 10px;
 }
 
-/* Responsive */
-@media screen and (max-width: 768px) {
-    .formulario {
-        grid-template-columns: 1fr;
-    }
 
-    .formulario__grupo-btn-calcular,
-    .formulario__btn {
-    grid-column: 1;
+/* Responsive */
+@media screen and (max-width: 576px) {
+    
+    .select-precio1git {
+        width: 100%;
     }
 
     .formulario__btn {
