--- a/css/style.css
+++ b/css/style.css
@@ -30,17 +30,6 @@ main {
     gap: 20px;
 }
 
-/* .select-dia1 {
-    grid-column: 1 / 2;
-} */
-
-/* .select-mes1 {
-    grid-column: 2 / 3;
-} */
-
-/* .select-anio1 {
-    grid-column: 3 / 4;
-} */
 .campo {
     grid-column: span 3;
     font-size: 20px;
@@ -56,7 +45,6 @@ main {
     width: 25%;
     margin: auto;
 }
-
 
 .formulario__label {
     display: block;
@@ -96,7 +84,7 @@ main {
     margin: 40px;
     height: 45px;
     line-height: 45px;
-    width: 30%;
+    width: 50%;
     background: rgb(19, 68, 106);
     color: white;
     font-size: 20px;
@@ -117,11 +105,10 @@ main {
     border-radius: 10px;
 }
 
-
 /* Responsive */
 @media screen and (max-width: 576px) {
     
-    .select-precio1git {
+    .select-precio1 {
         width: 100%;
     }
 
@@ -129,6 +116,3 @@ main {
         width: 100%;
     }
 };
-    
-
-
